# Programmieren2-Praktikum

./: .gitignore  README.md
1.1_IO_Operations/: .cproject  eingabe.txt  main.cpp
1.2_Functions/: CMakeLists.txt  main.cpp
1.3_Overloading_Operators/: CMakeLists.txt  Ringliste.cpp  Ringliste.h  main.cpp
1.4_Lists/: CMakeLists.txt  main.cpp
2.1_Fifo/: CMakeLists.txt  Fifo.cpp  Fifo.h  FifoElement.cpp  FifoElement.h  main.cpp
3.1_GeoObject/: Ball.cpp  Ball.h  CMakeLists.txt  GeoObjekt.cpp  GeoObjekt.h  Kreis.cpp  Kreis.h  Metrik2D.cpp  Metrik2D.h  Metrik3D.cpp  Metrik3D.h  MetrikVerhalten.cpp  MetrikVerhalten.h  OperandenPassenNicht.cpp  OperandenPassenNicht.h  Punkt.cpp  Punkt.h  Punkt2D.cpp  Punkt2D.h  Punkt3D.cpp  Punkt3D.h  Quader.cpp  Quader.h  Rechteck.cpp  Rechteck.h  main.cpp
