cmake_minimum_required(VERSION 3.20)
project(Aufgabe_3_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Aufgabe_3_1 main.cpp MetrikVerhalten.cpp MetrikVerhalten.h Metrik2D.cpp Metrik2D.h Metrik3D.cpp Metrik3D.h GeoObjekt.cpp GeoObjekt.h Rechteck.cpp Rechteck.h Kreis.cpp Kreis.h Quader.cpp Quader.h Ball.cpp Ball.h Punkt.cpp Punkt.h Punkt2D.cpp Punkt2D.h Punkt3D.cpp Punkt3D.h OperandenPassenNicht.cpp OperandenPassenNicht.h)
